[package]
name = "listlist"
version = "0.1.0"
authors = ["altug <altug@aecoffice.com>"]
edition = "2018"


[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0"
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1.7"
tokio-pg-mapper-derive = "0.1.5"
tokio-postgres = "0.5.4"
deadpool-postgres = "0.5.5"
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.5.0"